宫格 带参跳转
宫格 带参跳转

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "pages/logs/logs",
     "pages/department/department",
     "pages/my/my",
-    "pages/test/test"
+    "pages/doctor/doctor"
   ],
   "window": {
     "backgroundTextStyle": "light",
