图文咨询（富文本编辑器，图片上传逻辑待补充）
图文咨询（富文本编辑器，图片上传逻辑待补充）

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/department/department",
     "pages/my/my",
     "pages/doctorList/doctorList",
-    "pages/doctor/doctor"
+    "pages/doctor/doctor",
+    "pages/textConsult/textConsult"
   ],
   "window": {
     "backgroundTextStyle": "light",
