我的主页（健康档案、我的咨询、退出登录）
我的主页（健康档案、我的咨询、退出登录）

--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "pages/my/my",
     "pages/doctorList/doctorList",
     "pages/doctor/doctor",
-    "pages/textConsult/textConsult"
+    "pages/textConsult/textConsult",
+    "pages/my/healthFile/healthFile",
+    "pages/my/myConsult/myConsult"
   ],
   "window": {
     "backgroundTextStyle": "light",
