电话问诊（完成样式布局）
电话问诊（完成样式布局）

--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/doctor/doctor",
     "pages/textConsult/textConsult",
     "pages/my/healthFile/healthFile",
-    "pages/my/myConsult/myConsult"
+    "pages/my/myConsult/myConsult",
+    "pages/phoneConsult/phoneConsult"
   ],
   "window": {
     "backgroundTextStyle": "light",
