进行中订单（富文本展示，提交、确认按钮）
进行中订单（富文本展示，提交、确认按钮）

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "pages/my/healthFile/healthFile",
     "pages/phoneConsult/phoneConsult",
     "pages/my/textConsult/textConsult",
-    "pages/my/phoneConsult/phoneConsult"
+    "pages/my/phoneConsult/phoneConsult",
+    "pages/my/textConsult/ing/ing"
   ],
   "window": {
     "backgroundTextStyle": "light",
