待评价、已完成订单（富文本展示，评星，评价）
待评价、已完成订单（富文本展示，评星，评价）

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "pages/phoneConsult/phoneConsult",
     "pages/my/textConsult/textConsult",
     "pages/my/phoneConsult/phoneConsult",
-    "pages/my/textConsult/ing/ing"
+    "pages/my/textConsult/ing/ing",
+    "pages/my/textConsult/waitComment/waitComment",
+    "pages/my/textConsult/finish/finish"
   ],
   "window": {
     "backgroundTextStyle": "light",
