我的电话问诊（进行中、待评价、已完成）
我的电话问诊（进行中、待评价、已完成）

--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
     "pages/my/phoneConsult/phoneConsult",
     "pages/my/textConsult/ing/ing",
     "pages/my/textConsult/waitComment/waitComment",
-    "pages/my/textConsult/finish/finish"
+    "pages/my/textConsult/finish/finish",
+    "pages/my/phoneConsult/ing/ing",
+    "pages/my/phoneConsult/finish/finish",
+    "pages/my/phoneConsult/waitComment/waitComment"
   ],
   "window": {
     "backgroundTextStyle": "light",
