富文本图片上传（超级无敌异步回调）
富文本图片上传（超级无敌异步回调）

--- a/project.config.json
+++ b/project.config.json
@@ -23,12 +23,12 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.2",
-	"appid": "wx9f72fd6c9a63d4fe",
+	"appid": "wx3e5955768b640056",
 	"projectname": "home-doctor",
 	"debugOptions": {
 		"hidedInDevtools": []
